<resources>
    <string name="app_name">QrEveryWhere</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="permission_denied_text">Permission denied</string>

    <string name="nav_title_scan">Scan</string>
    <string name="nav_title_create">Create</string>
    <string name="nav_title_history">History</string>


    <string name="qrScanFabTextFromFile">Scan from file</string>
    <string name="requestQrFromFile">Scan from file</string>
    <string name="requestCameraPermission">Request Camera</string>


    <string name="qr_created_on_template">Created on %s</string>
    <string name="qr_scanned_on_template">Scanned on %s</string>
    <string name="qr_from_file_on_template">Loaded on %s</string>

    <string name="qr_detail_launch_template">Launch %s</string>

    <string name="ic_open_phone_app">phone call</string>
    <string name="ic_open_mail_app">mail app</string>
    <string name="ic_open_in_browser">in browser</string>
    <string name="ic_import_contact">Import contact</string>

    <string name="phone_template">Phone call to: %s</string>
    <string name="mail_template">Email to: %s</string>
    <string name="open_in_browser_template">Webpage: %s</string>
    <string name="contact_of_template">Contact of: %s</string>
    <string name="text_template">Text: %s</string>


    <!--     title create onelinerQrCode -->
    <string name="create_title_sms">Text</string>
    <string name="create_title_phone">Phone call</string>
    <string name="create_title_web">Web link</string>
    <string name="create_title_email">Email</string>

    <!--    titles detail screen-->
    <string name="detail_title_phone">Phone call</string>
    <string name="detail_title_email">Email</string>
    <string name="detail_title_web">Link</string>
    <string name="detail_title_text">Text</string>

    <!--    Snackbar and Toasts-->
    <string name="saved_in_history">Saved in history</string>
    <string name="saved_as_file">Qrcode image saved as file.</string>
    <string name="error_saved_as_file">Error could not save as file.</string>
    <string name="item_deleted">Deleted</string>
    <string name="undo_delete">Undo</string>

    <string name="history_list_empty_message">You have currently no qrcode.</string>


    <!--    Error messages -->
    <string name="error_could_not_create_qr_image">Could not create qr code</string>
    <string name="error_invalid_email_address">Please enter a valid email address.</string>
    <string name="create_one_liner_header_text_web">Please enter the web address including the protocol.</string>
    <string name="create_one_liner_header_text_message_text">Please enter your message.</string>
    <string name="create_one_liner_header_text_phone">Please enter the phone number.</string>
    <string name="create_one_liner_number_input_hint">Phone number</string>
    <string name="create_one_liner_input_layout_hint_web">Web address</string>
    <string name="create_one_liner_input_layout_hint_text_message">Text message</string>

    <string name="toast_clipboard_empty">Clipboard is empty</string>

    <string name="error_starting_camera">Error starting camera</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="auto_start_header">Start automatically or show qr content</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="automation_setting_title">Start automatically</string>
    <string name="automation_web_title">Open url in browser</string>
    <string name="automation_web_summary_on">Automatically open the contained web page</string>
    <string name="automation_web_summary_off">Show the qr content in the detail view</string>

    <string name="automation_open_mail_app_title">Open in email app</string>
    <string name="automation_open_mail_app_summary_on">Automatically open the contained web page</string>
    <string name="automation_open_mail_app_summary_off">Show the qr content in the detail view</string>
    <string name="error_msg_invalide_phone_number">Invalid phone number</string>
    <string name="error_msg_empty_text_message">Please insert some text</string>
    <string name="error_msg_invalide_web_adress">Invalid web address</string>
    <string name="qr_content_text">Qr content text:</string>
    <string name="qr_history_swipe_delete">Delete</string>
    <string name="qr_history_swipe_fullscreen">Fullscreen</string>
    <string name="qr_create_button_email">Email</string>
    <string name="qr_create_button_text">Text</string>
    <string name="qr_create_button_phone">Phone</string>
    <string name="qr_create_button_web">Web</string>
    <string name="qr_create_one_line_button_test">Test</string>
    <string name="qr_create_one_line_button_create">Create</string>


    <string name="qr_create_email_hint_recipient">Email</string>
    <string name="qr_create_email_hint_example_recipient">recipient@example.de</string>

    <string name="qr_create_email_hint_subject">Subject</string>
    <string name="qr_create_email_hint_example_subject">(optional)</string>
    <string name="qr_create_email_hint_message">Message</string>
    <string name="qr_create_email_button_create">Create</string>
    <string name="qr_create_email_button_save">Save to file</string>

    <string name="detailview_content_title">Content</string>

    <!-- Widget strings -->
    <string name="widget_no_qr">No QR code saved</string>
    <string name="widget_description">Display your recent QR code on the home screen</string>
    <string name="widget_qr_content_description">QR code image</string>

    <!-- Shortcut strings -->
    <string name="shortcut_scan">Scan QR</string>
    <string name="shortcut_scan_long">Scan a QR code</string>
    <string name="shortcut_create">Create QR</string>
    <string name="shortcut_create_long">Create a new QR code</string>
    <string name="shortcut_history">History</string>
    <string name="shortcut_history_long">View QR code history</string>

</resources>