<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/auto_start_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/automation_setting_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="web_page"
            app:summaryOff="@string/automation_web_summary_off"
            app:summaryOn="@string/automation_web_summary_on"
            app:title="@string/automation_web_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="phone_call"
            app:summaryOff="@string/automation_web_summary_off"
            app:summaryOn="@string/automation_web_summary_on"
            app:title="@string/automation_web_title" />

        <SwitchPreferenceCompat
            app:key="email_app"
            app:dependency="sync"
            app:summaryOff="@string/automation_web_summary_off"
            app:summaryOn="@string/automation_web_summary_on"
            app:title="@string/automation_web_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="contact_import"
            app:summaryOff="@string/automation_web_summary_off"
            app:summaryOn="@string/automation_web_summary_on"
            app:title="@string/automation_web_title" />


    </PreferenceCategory>

</PreferenceScreen>

<!--<PreferenceCategory app:title="@string/messages_header">-->

<!--<EditTextPreference-->
<!--    app:key="signature"-->
<!--    app:title="@string/signature_title"-->
<!--    app:useSimpleSummaryProvider="true" />-->

<!--<ListPreference-->
<!--    app:defaultValue="reply"-->
<!--    app:entries="@array/reply_entries"-->
<!--    app:entryValues="@array/reply_values"-->
<!--    app:key="reply"-->
<!--    app:title="@string/reply_title"-->
<!--    app:useSimpleSummaryProvider="true" />-->

<!--</PreferenceCategory>-->